--- a/grid.css
+++ b/grid.css
@@ -3,6 +3,12 @@ html{
 }
 .area{
     background-color: gray;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 10px;
+  row-gap: 20px;
+  column-gap:30px ;
     
 }
 .square{
