--- a/1PROJETO/style.css
+++ b/1PROJETO/style.css
@@ -25,3 +25,43 @@ section{
     width: 300px;
 
 }
+
+li{
+    margin-bottom: 5px;
+
+}
+td{
+padding: 8px;
+border: 1px solid #ddd;
+
+}
+.tabela-topo td{
+    background-color: #333333;
+    color: white;
+}
+label{
+    display: block;
+    margin-bottom: 5px;
+}
+input, select, textarea{
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #dddddd;
+}
+button{
+    padding: 10px 15px 10px 15px;
+    font-size: 16px;
+    background-color: #333333;
+    color: white;
+    border: 0;
+}
+footer{
+    text-align: center;
+    background-color:#333;
+    color: white;
+    padding: 10px;
+}
+footer nav a{
+    color: white;
+}
